Quick fix for radio button view alignment in control bar [Win/Moz]

--- a/apps/tasks/english.lproj/default_theme/bottom_bars.css
+++ b/apps/tasks/english.lproj/default_theme/bottom_bars.css
@@ -49,6 +49,10 @@
   padding-right: 4px;
 }
 
+.mozilla.windows .control-bar .sc-radio-view.sc-layout-horizontal .sc-radio-button {
+  margin-top: -10px;
+}
+
 /*-----------------------------------------------------------------
  * Status bar styles
  */
